--- a/Views/Shared/_Header.cshtml
+++ b/Views/Shared/_Header.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = Model.ViewTitle;
+//ViewBag.Title = Model.ViewTitle;
 }
 
 <!-- Header -->
@@ -7,7 +7,11 @@
     <div class="container">
         <div class="row">
             <div class="col-xl-10">
-                <h2>@Model.ViewTitle</h2>
+                <h2>@ViewBag.ViewTitle</h2>
+                @if (ViewBag.Message != null)
+                {
+                    <h3>@ViewBag.Message</h3>
+                }
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     </div> <!-- end of container -->
