--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,12 +1,13 @@
 ﻿@using DevPath.ViewModels.Account
 @model LoginViewModel
 @{
-    ViewBag.Title = "Log in";
+    ViewBag.ViewTitle = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
+@Html.Partial("_Header")
+
+<div class="ex-basic-1 bg-black pb-4">
+    <div class="container">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
@@ -38,7 +39,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Log in" class="btn btn-default" />
+                        <input type="submit" value="Log in" class="btn btn-primary" />
                     </div>
                 </div>
                 <p>
@@ -50,8 +51,6 @@
                     </p>*@
             }
         </section>
-    </div>
-    <div class="col-md-4">
         <section id="socialLoginForm">
             @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
         </section>
